--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,22 +5,24 @@ author:
 homepage:
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.20.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  googleapis_auth: ^0.2.12
-  dio: ^3.0.10
-  json_annotation: ^3.1.1
+  dio: ^4.0.0
+  freezed_annotation: ^0.14.1
+  googleapis_auth: ^1.1.0
+  grpc: ^3.0.0-nullsafety.0
+  json_annotation: ^4.0.1
+  protobuf: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.11.1
-  freezed: ^0.12.7
-  injectable_generator: ^1.1.0
-  json_serializable: ^3.5.1
+  build_runner: ^2.0.1
+  freezed: ^0.14.1+3
+  json_serializable: ^4.1.1
 
 flutter:
