--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,6 @@ name: flutter_flow
 description: A new flutter plugin project.
 version: 0.0.1
 author:
-homepage:
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -21,8 +20,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.0.1
+  build_runner: ^2.0.2
   freezed: ^0.14.1+3
   json_serializable: ^4.1.1
+  pedantic: ^1.11.0
 
 flutter:
